openmediavault (0.6.0.9) stable; urgency=low

  * Add option to omv-firstaid to clear the local upload package
    repository.
  * Supporting stateless address autoconfiguration (SLAAC) for IPv6
    network interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Apr 2014 00:25:45 +0200

openmediavault (0.6.0.8) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.
  * Hardening connection to engine daemon.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 16 Apr 2014 22:40:17 +0200

openmediavault (0.6.0.7) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 15 Apr 2014 22:33:10 +0200

openmediavault (0.6.0.6) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.
  * Automatically index upgradeable packages and plugins. This will increase
    WebGUI usability.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Apr 2014 07:37:25 +0200

openmediavault (0.6.0.5) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Apr 2014 12:03:56 +0200

openmediavault (0.6.0.4) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.
  * Adapt monit service configurations to new monit behaviour.
  * Mantis 0001021: Add feature to revert configuration changes.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 03 Apr 2014 19:58:23 +0200

openmediavault (0.6.0.3) stable; urgency=low

  * Various improvements.
  * Uncomment mod_tls_memcache proftpd module to fix start problem.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Mar 2014 00:55:09 +0100

openmediavault (0.6.0.2) stable; urgency=low

  * Update locales.
  * Adapt more services to Debian Wheezy.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 26 Mar 2014 13:14:47 +0100
