@@ -173,6 +173,7 @@ Ext.define("OMV.module.admin.system.network.interface.Physical", {
 					fields: [ "value", "text" ],
 					data: [
 						[ "manual", _("Manual") ],
+						[ "dhcp", _("DHCP") ],
 						[ "auto", _("Auto") ],
 						[ "static", _("Static") ]
 					]
@@ -448,6 +449,7 @@ Ext.define("OMV.module.admin.system.network.interface.Bond", {
 					fields: [ "value", "text" ],
 					data: [
 						[ "manual", _("Manual") ],
+						[ "dhcp", _("DHCP") ],
 						[ "auto", _("Auto") ],
 						[ "static", _("Static") ]
 					]
