@@ -4,6 +4,7 @@ openmediavault (0.6.0.9) stable; urgency=low
     repository.
   * Supporting stateless address autoconfiguration (SLAAC) for IPv6
     network interfaces.
+  * Supporting stateful address autoconfiguration for IPv6 network interfaces.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Apr 2014 00:25:45 +0200
 
